# demo-bitcoin

./: Cargo.toml  README.md
docs/: part1.md  part2.md
src/: application.rs  commands.rs  config.rs  lib.rs  pow.rs
src/commands/: calc_hash.rs  run.rs  start.rs
src/types/: mod.rs
tests/: acceptance.rs
