[package]
name = "demo_bitcoin"
authors = []
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.75"
clap = "4"
hex = "0.4.3"
num-bigint = "0.4.4"
num-traits = "0.2.17"
serde = { version = "1", features = ["serde_derive"] }
sha2 = "0.10.8"
sha256 = "1.4.0"
thiserror = "1"
time = "0.3.30"

[dependencies.abscissa_core]
version = "0.7.0"
# optional: use `gimli` to capture backtraces
# see https://github.com/rust-lang/backtrace-rs/issues/189
# features = ["gimli-backtrace"]

[dev-dependencies]
abscissa_core = { version = "0.7.0", features = ["testing"] }
once_cell = "1.2"

